--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
   <script src='lib/underscore-min.js' type='text/javascript'></script>
   <script src='lib/backbone-min.js' type='text/javascript'></script>
   <script src='swagger-ui.js' type='text/javascript'></script>
+  <script src='lang/translator.js' type='text/javascript'></script>
+  <script src='lang/zh-cn.js' type='text/javascript'></script>
   <script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
   <script src='lib/marked.js' type='text/javascript'></script>
 
