show swagger.json url

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,9 @@
         <a id="logo">StrongLoop API Explorer</a>
         <form id='api_selector'>
             <div class='input'>
+              <input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/>
+            </div>
+            <div class='input'>
                 <span class='accessTokenDisplay'>Token Not Set</span>
                 <input placeholder="accessToken" id="input_accessToken" name="accessToken" type="text"/>
             </div>
