--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
   <script src='lib/underscore-min.js' type='text/javascript'></script>
   <script src='lib/backbone-min.js' type='text/javascript'></script>
   <script src='swagger-ui.js' type='text/javascript'></script>
+  <script src='lang/translator.js' type='text/javascript'></script>
+  <script src='lang/en.js' type='text/javascript'></script>
+  <script src='lang/zh-cn.js' type='text/javascript'></script>
   <script src='lib/highlight.7.3.pack.js' type='text/javascript'></script>
   <script src='lib/marked.js' type='text/javascript'></script>
 
@@ -34,6 +37,7 @@
     <div class="swagger-ui-wrap">
         <a id="logo">StrongLoop API Explorer</a>
         <form id='api_selector'>
+            <div class='input'><input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/></div>
             <div class='input'>
                 <span class='accessTokenDisplay'>Token Not Set</span>
                 <input placeholder="accessToken" id="input_accessToken" name="accessToken" type="text"/>
